# bonfire

./: Dockerfile  LICENSE.md  README.md  dev.Dockerfile  docker-compose.yaml  go.work  go.work.sum
src/cpp/: .clang-format  CMakeLists.txt  conanfile.txt
src/cpp/app/audiomixer/: CMakeLists.txt  audiomixer_manager.cpp  audiomixer_manager.hpp  audiomixer_room.cpp  audiomixer_room.hpp  audiomixer_service.cpp  audiomixer_service.hpp  audiomixer_slot.cpp  audiomixer_slot.hpp  gst_mix_input_meta.cpp  gst_mix_input_meta.hpp  main.cpp  types.hpp
src/cpp/app/audiomixer/gst-plugins/: CMakeLists.txt
src/cpp/app/audiomixer/gst-plugins/bonaudiomixer/: CMakeLists.txt  gstaudiomixer.c  gstaudiomixer.h  gstaudiomixerelement.c  gstaudiomixerelements.h  gstaudiomixerorc.c  gstaudiomixerorc.h  gstaudiomixerorc.orc  gstaudiomixerplugin.c
src/cpp/app/audiomixer/proto/: CMakeLists.txt  audiomixer_service.proto
src/cpp/app/videomixer/: CMakeLists.txt  main.cpp  mixer_manager.cpp  mixer_manager.hpp  mixer_room.cpp  mixer_room.hpp  mixer_service.cpp  mixer_service.hpp  mixer_slot.cpp  mixer_slot.hpp  types.hpp
src/cpp/app/videomixer/proto/: CMakeLists.txt  mixer_service.proto
src/cpp/app/videomixer/scripts/: create_slot.sh  receive.sh  run.sh  send.sh
src/cpp/app/videoscaler/: CMakeLists.txt  main.cpp  types.hpp  videoscaler_manager.cpp  videoscaler_manager.hpp  videoscaler_service.cpp  videoscaler_service.hpp  videoscaler_slot.cpp  videoscaler_slot.hpp
src/cpp/app/videoscaler/proto/: CMakeLists.txt  videoscaler_service.proto
src/cpp/app/videoscaler/scripts/: create_slot.sh  receive.sh  send.sh
src/cpp/lib/cmake/: utils.cmake
src/cpp/lib/logger/: CMakeLists.txt  logger.hpp
src/cpp/lib/sync/: CMakeLists.txt  lock_guarded.hpp
src/cpp/lib/utils/: CMakeLists.txt  utils.cpp  utils.hpp
src/go/app/signaler/: go.mod  go.sum  main.go
src/go/app/signaler/client_browser/: index.html
src/go/app/signaler/common/: common.go
src/go/app/signaler/peer/: datachannel.go  peer.go
src/go/app/signaler/relay/audio/: audio_relay.go  audio_slot.go
src/go/app/signaler/relay/internal/: common.go
src/go/app/signaler/relay/video/: video_relay.go  video_slot.go
src/go/app/signaler/service/: room.go  service.go
src/go/app/signaler/transcode/: audiomixer_service.pb.go  audiomixer_service_grpc.pb.go  generate_stubs.sh  videoscaler_service.pb.go  videoscaler_service_grpc.pb.go
src/go/lib/: go.mod
src/go/lib/log/: log.go
src/go/lib/sync/: blocking_map.go
src/go/lib/utils/: utils.go
